syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

service JobService {
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
}

message JobResponse {
  string company = 1;
  string name = 2;
  string description = 3;
  repeated string stack = 4;
  int32 experience = 5;
  int32 proposed_salary = 6;
}

message GetAllRequest {}

message GetAllResponse {
  repeated JobResponse jobs = 1;
}

